refactor(build): migrate codebase to Java 25
Adopt Java 25 language and build tooling with OpenRewrite migration support,
modernize Java syntax and serialization annotations, and update dependencies.
Harden UTF-8 manifest handling and data-file installation rollback while expanding
coverage for startup, persistence, architecture, UI, and update failure scenarios.